--- a/Finance/Index_Simulations.ipynb
+++ b/Finance/Index_Simulations.ipynb
@@ -733,7 +733,7 @@
    ],
    "source": [
     "#create a dataframe by importing the csv file through \"pd\" or \"pandas\" library\n",
-    "df = pd.read_csv(\"Index Data.csv\")\n",
+    "df = pd.read_csv(\"Currency Data.csv\")\n",
     "#### do not modify below this line\n",
     "#print(df.head())\n",
     "### notice the columns names in the dataframe\n",
