--- a/Finance/BSM, Monte-Carlo, Var & ES.ipynb
+++ b/Finance/BSM, Monte-Carlo, Var & ES.ipynb
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## We will see how the average of MC simulations will get closer and closer to the expectation of the ABM as we increase the number of simulations, the solution for ABM is:\n",
+    "## We will see how the average of Monte Carlo simulations will get closer and closer to the expectation of the ABM as we increase the number of simulations, the solution for ABM is:\n",
     "$$S = S0 + \\mu * t + \\sigma W_t$$\n",
     "$$E[S] = S0 + \\mu * t$$"
    ]
