--- a/Finance/Options, Brownian Motion, Index Analysis.ipynb
+++ b/Finance/Options, Brownian Motion, Index Analysis.ipynb
@@ -825,7 +825,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# are the log-returns normally distributed ?"
+    "# Are the log-returns normally distributed like the Geometric Brownian Motion states?"
    ]
   },
   {
@@ -840,24 +840,6 @@
    "metadata": {},
    "source": [
     "Most of the values of skewness are quite reasonably close to 0 except from YENUSD. The kurtosis of the returns is somewhat positively dominant in FTSE, CAC40, Nikkei and YENUSD however It can be determined that the log returns are normally distributed.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook Index_Simulations.ipynb to html\n",
-      "[NbConvertApp] Writing 1297354 bytes to Index_Simulations.html\n"
-     ]
-    }
-   ],
-   "source": [
-    "!jupyter nbconvert --to html Index_Simulations.ipynb"
    ]
   },
   {
