--- a/Data Analysis/GPU's/GPU.ipynb
+++ b/Data Analysis/GPU's/GPU.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "educated-shower",
    "metadata": {},
    "outputs": [
@@ -16,7 +16,7 @@
        "        require.undef(\"plotly\");\n",
        "        requirejs.config({\n",
        "            paths: {\n",
-       "                'plotly': ['https://cdn.plot.ly/plotly-2.9.0.min']\n",
+       "                'plotly': ['https://cdn.plot.ly/plotly-2.4.2.min']\n",
        "            }\n",
        "        });\n",
        "        require(['plotly'], function(Plotly) {\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "described-creativity",
    "metadata": {},
    "outputs": [],
@@ -77,14 +77,14 @@
    "id": "fancy-train",
    "metadata": {},
    "source": [
-    "This is a top 50 of the most popular, or searched for GPUs in this particular site, it has the basic info of almost all GPUs so we can work with this.\n",
+    "This is a top 50 of the most popular, or searched for GPUs in this particular site, it has the basic info of almost all GPUs.\n",
     "\n",
     "This is a great site as it has all important specs of a GPU, only thing is it doesn't factor in the model type, number of slots, heatsink types, manufacturuer, etc. So all in all we have some missing aspect that we can't completely account for, but regardless we want to classify the graphics cards as being \"Modernized\" or not. I.e. capable of being used for modern day activities such as rendering, gaming and productivity usage."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "described-mapping",
    "metadata": {},
    "outputs": [],
@@ -12153,7 +12153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
