--- a/Data Analysis/Lebron Analysis/Analysis.ipynb
+++ b/Data Analysis/Lebron Analysis/Analysis.ipynb
@@ -284,6 +284,131 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "id": "ignored-integral",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Lg</th>\n",
+       "      <th>Pos</th>\n",
+       "      <th>G</th>\n",
+       "      <th>GS</th>\n",
+       "      <th>MP</th>\n",
+       "      <th>FG</th>\n",
+       "      <th>FGA</th>\n",
+       "      <th>...</th>\n",
+       "      <th>FT%</th>\n",
+       "      <th>ORB</th>\n",
+       "      <th>DRB</th>\n",
+       "      <th>TRB</th>\n",
+       "      <th>AST</th>\n",
+       "      <th>STL</th>\n",
+       "      <th>BLK</th>\n",
+       "      <th>TOV</th>\n",
+       "      <th>PF</th>\n",
+       "      <th>PTS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Apr-03</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>NBA</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>39.5</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>18.9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.754</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>20.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>May-04</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>NBA</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>42.4</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>21.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>27.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Season   Age Team   Lg Pos     G    GS    MP   FG   FGA  ...    FT%  ORB  \\\n",
+       "0  Apr-03  19.0  CLE  NBA  SG  79.0  79.0  39.5  7.9  18.9  ...  0.754  1.3   \n",
+       "1  May-04  20.0  CLE  NBA  SF  80.0  80.0  42.4  9.9  21.1  ...  0.750  1.4   \n",
+       "\n",
+       "   DRB  TRB  AST  STL  BLK  TOV   PF   PTS  \n",
+       "0  4.2  5.5  5.9  1.6  0.7  3.5  1.9  20.9  \n",
+       "1  6.0  7.4  7.2  2.2  0.7  3.3  1.8  27.2  \n",
+       "\n",
+       "[2 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "anonymous-integer",
    "metadata": {},
