--- a/Data Analysis/Lebron Analysis/Analysis.ipynb
+++ b/Data Analysis/Lebron Analysis/Analysis.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "ignored-integral",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
        "[2 rows x 30 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,17 +409,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "anonymous-integer",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x28402718>]"
+       "[<matplotlib.lines.Line2D at 0x25681df0>]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -451,17 +451,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "sharing-bench",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x285ab520>"
+       "<matplotlib.legend.Legend at 0x26819d48>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "welcome-wheel",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
        "'Our average Field Goal Attempts are 19.51 and Lebrons average 3 point attempts are 4.44'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "traditional-position",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
        "'Total number of samples is 18'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "incredible-murder",
    "metadata": {},
    "outputs": [],
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "catholic-miniature",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
        "'Our calculated test statistic is -1.719990892224297, locating the value on a Normal Distribution we find 0.04271704857603188 to be our z_score'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,22 +588,22 @@
    "id": "favorite-implement",
    "metadata": {},
    "source": [
-    "# Given that the test statistics is less then 0.05, we can reject the null hypothesis and declare that with 5% confidence Lebron's overall career 3 point attempts is less then 25% of his total field goal attempts. "
+    "# Given that the test statistics is less then 0.05, we can reject the null hypothesis and declare that Lebron's overall career 3 point attempts is greater then 25% of his total field goal attempts. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "designing-acrobat",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x27352508>"
+       "<seaborn.axisgrid.FacetGrid at 0x266f5910>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "split-triple",
    "metadata": {},
    "outputs": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "accredited-motivation",
    "metadata": {},
    "outputs": [
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "fewer-bible",
    "metadata": {},
    "outputs": [
@@ -730,10 +730,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   7.742</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Sun, 13 Jun 2021</td> <th>  Prob (F-statistic):</th>  <td>0.0133</td> \n",
+       "  <th>Date:</th>             <td>Mon, 04 Apr 2022</td> <th>  Prob (F-statistic):</th>  <td>0.0133</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>20:12:59</td>     <th>  Log-Likelihood:    </th> <td> -23.360</td>\n",
+       "  <th>Time:</th>                 <td>22:00:59</td>     <th>  Log-Likelihood:    </th> <td> -23.360</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    18</td>      <th>  AIC:               </th> <td>   50.72</td>\n",
@@ -782,8 +782,8 @@
        "Dep. Variable:                    3PA   R-squared:                       0.326\n",
        "Model:                            OLS   Adj. R-squared:                  0.284\n",
        "Method:                 Least Squares   F-statistic:                     7.742\n",
-       "Date:                Sun, 13 Jun 2021   Prob (F-statistic):             0.0133\n",
-       "Time:                        20:12:59   Log-Likelihood:                -23.360\n",
+       "Date:                Mon, 04 Apr 2022   Prob (F-statistic):             0.0133\n",
+       "Time:                        22:00:59   Log-Likelihood:                -23.360\n",
        "No. Observations:                  18   AIC:                             50.72\n",
        "Df Residuals:                      16   BIC:                             52.50\n",
        "Df Model:                           1                                         \n",
@@ -805,7 +805,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "fixed-abuse",
    "metadata": {},
    "outputs": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "occupational-collective",
    "metadata": {},
    "outputs": [
@@ -946,12 +946,12 @@
    "id": "closing-grenada",
    "metadata": {},
    "source": [
-    "## Now providing a multivariable regression "
+    "## Now providing a multivariate regression "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "planned-delay",
    "metadata": {},
    "outputs": [
@@ -1008,7 +1008,7 @@
        "FTA     1.492921"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "supposed-oakland",
    "metadata": {},
    "outputs": [
@@ -1087,7 +1087,7 @@
        "17    25.0  24.605858"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "received-incentive",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "resistant-heaven",
    "metadata": {
     "scrolled": true
@@ -1145,7 +1145,7 @@
        "array([24.88549134])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "grave-phoenix",
    "metadata": {},
    "outputs": [
@@ -1191,10 +1191,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   22.37</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Sun, 13 Jun 2021</td> <th>  Prob (F-statistic):</th> <td>9.91e-06</td>\n",
+       "  <th>Date:</th>             <td>Mon, 04 Apr 2022</td> <th>  Prob (F-statistic):</th> <td>9.91e-06</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>20:12:59</td>     <th>  Log-Likelihood:    </th> <td> -21.289</td>\n",
+       "  <th>Time:</th>                 <td>22:01:01</td>     <th>  Log-Likelihood:    </th> <td> -21.289</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    18</td>      <th>  AIC:               </th> <td>   52.58</td>\n",
@@ -1252,8 +1252,8 @@
        "Dep. Variable:                    PTS   R-squared:                       0.873\n",
        "Model:                            OLS   Adj. R-squared:                  0.834\n",
        "Method:                 Least Squares   F-statistic:                     22.37\n",
-       "Date:                Sun, 13 Jun 2021   Prob (F-statistic):           9.91e-06\n",
-       "Time:                        20:12:59   Log-Likelihood:                -21.289\n",
+       "Date:                Mon, 04 Apr 2022   Prob (F-statistic):           9.91e-06\n",
+       "Time:                        22:01:01   Log-Likelihood:                -21.289\n",
        "No. Observations:                  18   AIC:                             52.58\n",
        "Df Residuals:                      13   BIC:                             57.03\n",
        "Df Model:                           4                                         \n",
@@ -1278,7 +1278,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "dress-arkansas",
    "metadata": {},
    "outputs": [
@@ -1332,7 +1332,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "neural-combat",
    "metadata": {},
    "outputs": [
@@ -1366,7 +1366,7 @@
        "Text(0.5, 1.0, 'Lebrons Efficiency over the Years')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
