--- a/Data Analysis/GPU's/GPU.ipynb
+++ b/Data Analysis/GPU's/GPU.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "educated-shower",
    "metadata": {},
    "outputs": [
@@ -11,12 +11,12 @@
       "text/html": [
        "        <script type=\"text/javascript\">\n",
        "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
-       "        if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
+       "        if (window.MathJax && window.MathJax.Hub && window.MathJax.Hub.Config) {window.MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
        "        if (typeof require !== 'undefined') {\n",
        "        require.undef(\"plotly\");\n",
        "        requirejs.config({\n",
        "            paths: {\n",
-       "                'plotly': ['https://cdn.plot.ly/plotly-2.4.2.min']\n",
+       "                'plotly': ['https://cdn.plot.ly/plotly-2.29.1.min']\n",
        "            }\n",
        "        });\n",
        "        require(['plotly'], function(Plotly) {\n",
@@ -262,9 +262,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "simplified-discretion",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -816,9 +814,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "mediterranean-bailey",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -12285,20 +12281,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "bulgarian-selection",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Prediction\n",
-    "\n",
-    "## Having TU - RTX 20 , GA - RTX 30, Navi - Radeon 6000s\n",
-    "# Maybe if its made in year 2019-21 would be best\n",
-    "\n",
-    "# create a model, that predicts based on the stats, date and bus etc etc\n",
-    "\n",
-    "# Do a random search or maybe ask the user to input somethign that then the model would have ot determine its capability "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -12329,7 +12316,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -12343,7 +12330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
